--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -12,6 +13,7 @@
     }
     #form {
       margin-bottom: 20px;
+      padding: 2px;
     }
     #combinations {
       list-style-type: none;
@@ -19,21 +21,34 @@
     .error {
       color: red;
     }
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+  }
+  li {
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: #f9f9f9;
+    color: #333;
+    font-size: 1.2em;
+}
+ 
   </style>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin: 2px;">
     <h1>Gerador de combinações númericas</h1>
     <form id="form">
-      <label for="numbers">Insira os números a ser combinados (separados por vírgula):</label>
+      <label for="numbers"><p>Insira os números a ser combinados (separados por vírgula):</p></label>
       <input type="text" id="numbers" name="numbers">
       <span id="number-error" class="error"></span>
-      <br>
-      <label for="length">Insira de quantos numeros serão as combinações(ex: 6 vai gerar combinações de 6 a 6):</label>
-      <input type="number" id="length" name="length">
+      <br><p></p>
+      <label for="length"><p>Insira de quantos numeros serão as combinações(ex: 6 vai gerar combinações de 6 a 6):</p></label>
+      <input type="number" id="length"  name="length">
       <span id="length-error" class="error"></span>
       <br><br>
-      <button type="button" onclick="generateCombinations()">Gerar combinações</button>
+      <button type="button" class="btn btn-dark" onclick="generateCombinations()">Gerar combinações</button>
     </form>
     <h2>Combinações geradas:</h2>
     <ul id="combinations"></ul>
@@ -85,7 +100,7 @@
   
         // Exibe o número de combinações geradas
         var count = document.getElementById("count");
-        count.textContent = "Combinações geradas: " + combinations.length;
+        count.textContent = "Total de combinações geradas: " + combinations.length;
       }
   
       function getCombinations(arr, len) {
