--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Combinações</title>
+    <meta name="description" content="Na JPCombinação voce pode fazer combinações para loterias">
+    <meta name="keywords" content="tv, tv online, tv ao vivo, tvs, tvs ao vivo, webtv, tv internet, canal online, emissora online, streaming de tv, canal de notícias, esportes">
+    <meta property="og:site_name" content="Faça sua combinação para jogos de loterias na JPCombinação">
+    <meta property="og:description" content="Na JPCombinação voce pode fazer combinações para loterias">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>JP Combinações</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <style>
     body {
@@ -29,7 +33,7 @@
   li {
     padding: 8px;
     margin-bottom: 7px;
-    background-color: #f9f9f9;
+    background-color: #fcf6f6;
     color: #333;
     font-size: 1.2em;
 }
